foundation-objs/main/default/objects/Feedback__c/fields/Feedback_Object__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Object__c</fullName>
    <label>Feedback Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>