foundation-objs/main/default/objects/Feedback__c/fields/Feedback_Owner__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Feedback Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>