foundation-objs/main/default/objects/Feedback__c/fields/Need_Improvement__c.field-meta.xml
<CustomField>
    <fullName>Need_Improvement__c</fullName>
    <label>Need Improvement</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>