foundation-objs/main/default/objects/Feedback__c/fields/Pluses__c.field-meta.xml
<CustomField>
    <fullName>Pluses__c</fullName>
    <label>Pluses</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>